# robot-sim

./: .gitignore  PROJECT.md  README.md  pyproject.toml  requirements-runpod.txt
.streamlit/: config.toml
docs/: LEROBOT_CACHE.md  experiment-audit.md  open-questions-research.md  tools-research.md  vla-comparison-project.md
lerobot_cache/: __init__.py  cache_backend.py  cached_dataset.py  cli.py
outputs/benchmark/: training_benchmark.json
outputs/probes/: probe_results_cosmos_policy_franka.json  probe_results_openvla.json  probe_results_openvla_oft_franka.json  probe_results_openvla_widowx.json  probe_results_pi0_franka.json  probe_results_smolvla.json  probe_results_xvla.json  probe_results_xvla_widowx.json
results/probes/: probe_results_openvla_oft_franka.json  probe_results_pi0_widowx.json
scripts/: benchmark_decode.py  benchmark_training.py  dashboard.py  evaluate.py  generate_charts.py  generate_results.py  generate_viz.py  predecode_dataset.py  run_cosmos_cloud.sh  run_experiment.py  run_sim.py  run_sim_interactive.py  setup_runpod.sh  sim_viewer.py  start_dashboard.sh  start_probe_dashboard.sh  train.py  train_bg.sh  visualize.py
tests/: test_cache.py
vla_probing/: README.md  __init__.py  __main__.py  adapter.py  dashboard.py  metrics.py  run_all.py  scene.py  tracking.py
vla_probing/adapters/: __init__.py  cosmos_policy.py  groot.py  openvla.py  openvla_oft.py  pi0.py  smolvla.py
vla_probing/assets/franka/: franka_vision_scene.xml
vla_probing/assets/widowx/: widowx_vision_scene.xml  wx250s.xml
vla_probing/notebooks/: explore_probes.py
vla_probing/probes/: __init__.py  attention.py  base.py  baseline.py  camera_sensitivity.py  counterfactual.py  null_action.py  perturbation.py  spatial_symmetry.py  view_ablation.py  vlm_query.py
