[project]
name = "robot-sim"
version = "0.1.0"
description = "Run robot foundation models in MuJoCo simulation"
requires-python = ">=3.10"
dependencies = [
    "lerobot[aloha,pusht]",
    "streamlit",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]
vla-probing = [
    "lerobot[xvla]",
    "captum",
    "plotly",
    "wandb",
    "dtw-python",
    "scipy",
    "kaleido",
]
openvla = [
    "transformers>=4.40.0",
    "timm>=0.9.10,<1.0.0",
    "tokenizers",
    "Pillow",
    "scipy",
]

[project.scripts]
lerobot-cache = "lerobot_cache.cli:main"
