[project]
name = "robot-sim"
version = "0.1.0"
description = "Run robot foundation models in MuJoCo simulation"
requires-python = ">=3.10"
dependencies = [
    "lerobot[aloha,pusht]",
    "matplotlib>=3.10.8",
    "pillow>=12.1.1",
    "plotly>=6.5.2",
    "streamlit",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]
vla-probing = [
    "lerobot[xvla,smolvla]",
    "captum",
    "plotly",
    "wandb",
    "dtw-python",
    "scipy",
    "kaleido",
]
pi0 = [
    "scipy>=1.10.1,<1.15",
]
openvla = [
    "transformers>=4.40.0",
    "timm",
    "tokenizers",
    "Pillow",
    "scipy",
]

[project.scripts]
lerobot-cache = "lerobot_cache.cli:main"
